adv_deploy/bigip01-cc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bigip01-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr1
      labels:
        app: k8s-bigip-ctlr1
    spec:
      serviceAccountName: k8s-bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:latest"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=10.1.1.49",
            "--bigip-partition=ose",
            "--pool-member-type=cluster",
            "--manage-routes=true",
            "--node-poll-interval=5",
            "--verify-interval=5",
            "--namespace=f5bluegreen",
            "--namespace=yelb",
            "--namespace=f5demo",
            "--route-vserver-addr=10.1.2.50",
            "--route-http-vserver=ocp-vserver",
            "--route-https-vserver=ocp-https-vserver",
            "--openshift-sdn-name=/Common/ose-tunnel"
          ]
      imagePullSecrets:
        - name: f5-docker-images
