adv_deploy/f5-cluster-deployment2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: k8s-bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:latest"
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=10.1.3.100",
            "--bigip-partition=ose",
            "--pool-member-type=cluster",
            "--openshift-sdn-name=/Common/ose-tunnel",
            "--manage-routes=true",
            "--node-poll-interval=5",
            "--verify-interval=5",
            "--namespace=demoproj",
            "--namespace=yelb",
            "--namespace=guestbook",
            "--namespace=f5demo",
            "--route-vserver-addr=10.1.2.50",
            "--route-http-vserver=ocp-vserver",
            "--route-https-vserver=ocp-https-vserver"
          ]
