adv_deploy/f5-demo-app-bg-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-blue
  namespace: f5bluegreen
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: node-blue
    spec:
      containers:
      - image: "chen23/f5-demo-app:openshift"
        imagePullPolicy: IfNotPresent
        name: node-blue
        ports:
        - containerPort: 8080
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: node-blue
  labels:
    run: node-blue
  namespace: f5bluegreen
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  type: ClusterIP
  selector:
    run: node-blue

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-green
  namespace: f5bluegreen
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: node-green
    spec:
      containers:
      - image: "chen23/f5-demo-app:openshift"
        imagePullPolicy: IfNotPresent
        name: node-green
        ports:
        - containerPort: 8080
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: node-green
  labels:
    run: node-green
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  type: ClusterIP
  selector:
    run: node-green
