adv_deploy/f5-demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-demo-app
  labels:
    name: f5-demo-app
  namespace: tenanta-dev
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: f5-demo-app
