adv_deploy/f5-demo-app-bg-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: f5-demo-app-bg-route
  name: f5-demo-app-bg-route
  namespace: f5bluegreen
  annotations:
    # Specify a supported BIG-IP load balancing mode
    virtual-server.f5.com/balance: least-connections-node
    virtual-server.f5.com/health: |
      [
        {
          "path": "govoseapp1.cloudmegalodon.us/",
          "send": "HTTP GET /",
          "interval": 5,
          "timeout": 10
        }
      ]
spec:
  host: govoseapp1.cloudmegalodon.us
  port:
    targetPort: 8080
  to:
    kind: Service
    name: node-blue
    weight: 20
  alternateBackends:
  - kind: Service
    name: node-green
    weight: 10
